[package]
name = "barsign-disp"
version = "0.0.1"
authors = [ "David Sawatzke <d-git@sawatzke.dev>" ]
edition = "2018"

[dependencies]
litex-pac = { path = "../litex-pac", features = ["rt"]}
riscv-rt = "0.8.0"
panic-halt = "0.2"
litex-hal = {git = "https://github.com/david-sawatzke/rust-litex-hal", rev="cd9e00b678a42eacc72b055946b3ae08a76ad85f"}
embedded-hal = {version = "0.2.4", features = ["unproven"]}
spi-memory = "0.2.0"
nb = "1"
riscv = "0.6"
menu = "0.3"
smoltcp = { version = "0.7", default-features = false, features = ["ethernet", "proto-ipv4", "socket-icmp", "socket-udp","socket-tcp"] }


[profile.release]
# It will be removed when converting to a binary
debug = true

# Improve code generation
lto = true
codegen-units = 1
